--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,19 @@
 </head>
 
 <body>
+
+    <div class="weather-screen main-color-bg">
+        <div class="container">
+            <div class="row ">
+                <div class="input-group my-3 main-color-bg rounded-5 py-2 my-5">
+                    <input type="text" class="form-control main-color-bg rounded-5 border-0 text-white"  placeholder="Find your location...">
+                    <button type="button" class="btn btn-primary rounded-5 px-4">Find</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="/js/main.js"></script>
 </body>
