--- a/html/index.html
+++ b/html/index.html
@@ -18,34 +18,33 @@
 </head>
 
 <body>
- 
-    Weather
-    
-    HomeNewsLive camerasPhotosContact
-    
     <nav class="navbar navbar-expand-lg main-color-bg py-4">
         <div class="container">
             <div class="navbar-brand text-white d-flex flex-nowrap align-items-center">
                 <img src="../imgs/logo.png" alt="">
-                <div class="ms-2"> 
+                <div class="ms-2">
                     <h1 class="m-0 fw-bolder">Weather</h1>
                     <p class="my-0 fw-lighter">tagline goes here</p>
                 </div>
             </div>
-            <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
+                    <li class="nav-item mx-3">
                         <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Features</a>
+                    <li class="nav-item mx-3">
+                        <a class="nav-link text-light" href="#">News</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Pricing</a>
+                    <li class="nav-item mx-3">
+                        <a class="nav-link text-light" href="#">Live cameras</a>
+                    </li>
+                    <li class="nav-item mx-3">
+                        <a class="nav-link text-light" href="#"> Contact</a>
                     </li>
                 </ul>
             </div>
@@ -55,49 +54,43 @@
     <div class="weather-screen secondary-color-bg">
         <div class="container">
             <div class="row">
-                <div class="search input-group my-3 rounded-5 py-2 my-4">
-                    <input type="text" class="form-control main-color-bg rounded-5 border-0 text-white py-3 px-4"
+                <div class="search input-group my-3 rounded-5 main-color-bg py-2 my-4">
+                    <input type="text" class="form-control main-color-bg rounded-5 border-0 text-white py-2 px-4"
                         placeholder="Find your location...">
-                    <button type="button" class="btn btn-primary rounded-5 px-4">Find</button>
+                    <button type="button" class="btn btn-primary rounded-5 px-5">Find</button>
                 </div>
             </div>
 
             <div class="row weather-cards">
-                <div class="inner p-3 col-sm-12 col-md-6 col-lg-4 text-white">
-                    <div class=" text-center weather-card p-3 ">
-                        <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et eum facere sapiente
-                            doloribus
-                            itaque architecto excepturi cumque ut nescidit.</h3>
-                    </div>
-                </div>
-                <div class="inner  p-3 col-sm-12 col-md-6 col-lg-4 text-white">
-                    <div class=" text-center weather-card p-3">
-                        <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et eum facere sapiente
-                            doloribus
-                            itaque architecto excepturi cumque ut nescidit.</h3>
-                    </div>
-                </div>
-                <div class="inner  p-3 col-sm-12 col-md-6 col-lg-4 text-white">
-                    <div class=" text-center weather-card p-3 ">
-                        <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et eum facere sapiente
-                            doloribus
-                            itaque architecto excepturi cumque ut nescidit.</h3>
-                    </div>
-                </div>
             </div>
         </div>
-        <footer class="secondary-color-bg">
+        <footer class="secondary-color-bg py-5">
             <div class="container">
-                <div class="row">
-                    <div class="search input-group my-3 rounded-5 py-2 my-5">
-                        <input type="text" class="form-control main-color-bg rounded-5 border-0 text-white py-3 px-4"
-                            placeholder="Enter your email to subscribe...">
-                        <button type="button" class="btn btn-primary rounded-5 px-4">subscribe</button>
+                <div class="row align-items-center justify-content-center">
+                    <div class="col-sm-12 col-lg-8">
+                        <div class="search input-group my-3 rounded-5 main-color-bg py-2 my-4">
+                            <input type="text"
+                                class="form-control main-color-bg rounded-5 border-0 text-white py-2 px-4"
+                                placeholder="Enter your email to subscribe...">
+                            <button type="button" class="btn btn-primary rounded-5 px-5 me-2">subscribe</button>
+                        </div>
                     </div>
-                    <div class="social-"></div>
-                </div>
-            </div>
+                    <div class="col-sm-12 col-lg-4">
+                        <div class="social-icons d-flex align-items-center justify-content-center">
+                            <a href="https://x.com/Mai_Hetemy" target="_blank"><i
+                                    class="fab fa-twitter fs-4 mx-3 "></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=100006050388588" target="_blank"><i
+                                    class="fab fa-facebook fs-4 mx-3"></i></a>
+                            <a href="https://www.linkedin.com/in/mai-hetemy-533b65248/" target="_blank"><i
+                                    class="fab fa-linkedin-in fs-4 mx-3"></i></a>
+                            <a href="https://www.youtube.com/" target="_blank"><i
+                                    class="fab fa-youtube fs-4 mx-3"></i></a>
 
+                        </div>
+                    </div>
+                </div>
+                <p class="text-white fs-6">Copyright 2014 Company name. Designed by Themezy. All rights reserved</p>
+            </div>
         </footer>
     </div>
 
