--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+
     <nav class="navbar navbar-expand-lg main-color-bg py-4">
         <div class="container">
             <div class="navbar-brand text-white d-flex flex-nowrap align-items-center">
@@ -50,17 +51,15 @@
             </div>
         </div>
     </nav>
-
     <div class="weather-screen secondary-color-bg">
         <div class="container">
             <div class="row">
-                <div class="search input-group my-3 rounded-5 main-color-bg py-2 my-4">
-                    <input type="text" class="form-control main-color-bg rounded-5 border-0 text-white py-2 px-4"
+                <div class=" input-group my-3 rounded-5 main-color-bg py-2 my-4">
+                    <input id="search" type="text" class="form-control main-color-bg rounded-5 border-0 text-white py-2 px-4"
                         placeholder="Find your location...">
                     <button type="button" class="btn btn-primary rounded-5 px-5">Find</button>
                 </div>
             </div>
-
             <div class="row weather-cards">
             </div>
         </div>
@@ -93,7 +92,6 @@
             </div>
         </footer>
     </div>
-
 
     <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="/js/main.js"></script>
