--- a/html/index.html
+++ b/html/index.html
@@ -55,7 +55,8 @@
         <div class="container">
             <div class="row">
                 <div class=" input-group my-3 rounded-5 main-color-bg py-2 my-4">
-                    <input id="search" type="text" class="form-control main-color-bg rounded-5 border-0 text-white py-2 px-4"
+                    <input id="search" type="text"
+                        class="form-control main-color-bg rounded-5 border-0 text-white py-2 px-4"
                         placeholder="Find your location...">
                     <button type="button" class="btn btn-primary rounded-5 px-5">Find</button>
                 </div>
@@ -63,34 +64,33 @@
             <div class="row weather-cards">
             </div>
         </div>
-        <footer class="secondary-color-bg py-5">
-            <div class="container">
-                <div class="row align-items-center justify-content-center">
-                    <div class="col-sm-12 col-lg-8">
-                        <div class="search input-group my-3 rounded-5 main-color-bg py-2 my-4">
-                            <input type="text"
-                                class="form-control main-color-bg rounded-5 border-0 text-white py-2 px-4"
-                                placeholder="Enter your email to subscribe...">
-                            <button type="button" class="btn btn-primary rounded-5 px-5 me-2">subscribe</button>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-lg-4">
-                        <div class="social-icons d-flex align-items-center justify-content-center">
-                            <a href="https://x.com/Mai_Hetemy" target="_blank"><i
-                                    class="fab fa-twitter fs-4 mx-3 "></i></a>
-                            <a href="https://www.facebook.com/profile.php?id=100006050388588" target="_blank"><i
-                                    class="fab fa-facebook fs-4 mx-3"></i></a>
-                            <a href="https://www.linkedin.com/in/mai-hetemy-533b65248/" target="_blank"><i
-                                    class="fab fa-linkedin-in fs-4 mx-3"></i></a>
-                            <a href="https://www.youtube.com/" target="_blank"><i
-                                    class="fab fa-youtube fs-4 mx-3"></i></a>
+    </div>
 
-                        </div>
+    <footer class="secondary-color-bg py-5">
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-sm-12 col-lg-8">
+                    <div class="search input-group my-3 rounded-5 main-color-bg py-2 my-4">
+                        <input type="text" class="form-control main-color-bg rounded-5 border-0 text-white py-2 px-4"
+                            placeholder="Enter your email to subscribe...">
+                        <button type="button" class="btn btn-primary rounded-5 px-5 me-2">subscribe</button>
                     </div>
                 </div>
-                <p class="text-white fs-6">Copyright 2014 Company name. Designed by Themezy. All rights reserved</p>
+                <div class="col-sm-12 col-lg-4">
+                    <div class="social-icons d-flex align-items-center justify-content-center">
+                        <a href="https://x.com/Mai_Hetemy" target="_blank"><i class="fab fa-twitter fs-4 mx-3 "></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100006050388588" target="_blank"><i
+                                class="fab fa-facebook fs-4 mx-3"></i></a>
+                        <a href="https://www.linkedin.com/in/mai-hetemy-533b65248/" target="_blank"><i
+                                class="fab fa-linkedin-in fs-4 mx-3"></i></a>
+                        <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube fs-4 mx-3"></i></a>
+
+                    </div>
+                </div>
             </div>
-        </footer>
+            <p class="text-white fs-6">Copyright 2014 Company name. Designed by Themezy. All rights reserved</p>
+        </div>
+    </footer>
     </div>
 
     <script src="/js/bootstrap.bundle.min.js"></script>
