search button and defult display

--- a/html/index.html
+++ b/html/index.html
@@ -58,10 +58,28 @@
                     <input id="search" type="text"
                         class="form-control main-color-bg rounded-5 border-0 text-white py-2 px-4"
                         placeholder="Find your location...">
-                    <button type="button" class="btn btn-primary rounded-5 px-5">Find</button>
+                    <button type="button" class="btn btn-primary rounded-5 px-5" id="searchBtn">Find</button>
                 </div>
             </div>
             <div class="row weather-cards">
+            </div>
+        </div>
+    </div>
+
+    <div class="contact main-color-bg d-none">
+        <div class="container">
+            <div class="title p-3 border-3">
+                <p class="d-flex flex-nowrap m-0">Home -> <span class="text-white ms-2"> Contact</span></p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row my-5">
+                <div class="location col-sm-12 col-lg-5 p-3 secondary-color-bg">
+                    <iframe
+                        src="https://maps.google.com/maps?width=100%125&amp;height=300&amp;hl=en&amp;q=portsaid+(Contact)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
+                            href="https://www.gps.ie/">gps tracker sport</a>
+                    </iframe>
+                </div>
             </div>
         </div>
     </div>
