--- a/html/index.html
+++ b/html/index.html
@@ -36,7 +36,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item mx-3">
-                        <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active text-white" aria-current="page" href="#" id="homeNav">Home</a>
                     </li>
                     <li class="nav-item mx-3">
                         <a class="nav-link text-light" href="#">News</a>
@@ -45,13 +45,13 @@
                         <a class="nav-link text-light" href="#">Live cameras</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link text-light" href="#"> Contact</a>
+                        <a class="nav-link text-light" href="#" id="contactNav"> Contact</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="weather-screen secondary-color-bg">
+    <div class="weatherScreen secondary-color-bg d-block">
         <div class="container">
             <div class="row">
                 <div class=" input-group my-3 rounded-5 main-color-bg py-2 my-4">
@@ -66,19 +66,63 @@
         </div>
     </div>
 
-    <div class="contact main-color-bg d-none ">
+    <div class="contactScreen main-color-bg d-none">
         <div class="container">
             <div class="title p-3 border-3">
                 <p class="d-flex flex-nowrap m-0">Home -> <span class="text-white ms-2"> Contact</span></p>
             </div>
         </div>
-        <div class="container">
-            <div class="row my-5">
-                <div class="location col-sm-12 col-lg-5 p-3 secondary-color-bg">
-                    <iframe
-                        src="https://maps.google.com/maps?width=100%125&amp;height=300&amp;hl=en&amp;q=portsaid+(Contact)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
-                            href="https://www.gps.ie/">gps tracker sport</a>
-                    </iframe>
+        <div class="container py-4">
+            <div class="row ">
+                <div class="location col-lg-5 p-3">
+                    <div class="inner p-3 secondary-color-bg rounded-4">
+                        <iframe class="rounded-4 mb-1"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d54581.593117299104!2d32.24396943812418!3d31.23874487042198!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f99c3e939e6b99%3A0x4cae04550f7d4cb3!2sPort%20Said%2C%20Port%20Fouad%20City%2C%20Port%20Said%20Governorate!5e0!3m2!1sen!2seg!4v1728766616488!5m2!1sen!2seg"
+                            width=100% height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <ul class="text-white m-0">
+                            <li>
+                                <i class="fa-solid fa-location-dot me-2 text-info"></i>
+                                A108 Adam Street, New York, NY 535022
+                            </li>
+                            <li>
+                                <a href="maihetemy@gmail.com"><i
+                                        class="fa-solid fa-envelope me-2 text-info"></i>contact@example.com</a>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-phone text-info"></i>
+                                +1 5589 55488 55
+                            </li>
+
+                        </ul>
+                    </div>
+
+                </div>
+                <div class="col-lg-7 text-white-50 py-3">
+                    <h1>Contact us</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque vel maxime beatae amet
+                        voluptatibus aperiam eligendi quasi, labore provident rerum? Rerum eligendi repellat harum ab?
+                        Dicta accusamus qui eius minima.</p>
+                    <form>
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-lg-6 my-1 px-0 pe-1">
+                                    <input type="email" class="form-control main-color-bg  my-2 pe-1"
+                                        id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email" />
+                                </div>
+                                <div class="col-lg-6 my-1 px-0 ">
+                                    <input type="password" class="form-control main-color-bg text-white my-2 pe-1"
+                                        id="exampleInputPassword1" placeholder="Password" />
+                                </div>
+                                <div class="my-1 px-0">
+                                    <textarea class="form-control main-color-bg  my-2 "
+                                        placeholder="Leave a comment here" id="floatingTextarea2"
+                                        style="height: 70px"></textarea>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-primary rounded-5 px-5 me-2">Submit</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -110,7 +154,7 @@
         </div>
     </footer>
 
-    
+
     </div>
 
     <script src="/js/bootstrap.bundle.min.js"></script>
