--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
 </head>
 
 <body>
@@ -22,13 +23,13 @@
     <nav class="navbar navbar-expand-lg main-color-bg py-4">
         <div class="container">
             <div class="navbar-brand text-white d-flex flex-nowrap align-items-center">
-                <img src="../imgs/logo.png" alt="">
+                <img src="./imgs/logo.png" alt="">
                 <div class="ms-2">
                     <h1 class="m-0 fw-bolder">Weather</h1>
                     <p class="my-0 fw-lighter">tagline goes here</p>
                 </div>
             </div>
-            <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse"
+            <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -65,7 +66,6 @@
             </div>
         </div>
     </div>
-
     <div class="contactScreen main-color-bg d-none">
         <div class="container">
             <div class="title p-3 border-3">
@@ -127,7 +127,6 @@
             </div>
         </div>
     </div>
-
     <footer class="secondary-color-bg py-5">
         <div class="container">
             <div class="row align-items-center justify-content-center">
@@ -153,9 +152,6 @@
             <p class="text-white fs-6">Copyright 2014 Company name. Designed by Themezy. All rights reserved</p>
         </div>
     </footer>
-
-
-    </div>
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
